# Vignetting_corrector

./: CMakeLists.txt
Archive/C++/Vig_Correction_opencv1/: CMakeLists.txt
C++/: test
C++/Vig_Correction/: CMakeLists.txt  TEST  tutor
C++/Vig_Correction/app/: Vig_Correction.cpp
C++/Vig_Correction/include/: ColorCorrection.hpp  Matrix.h
C++/Vig_Correction_opencv1/: mkbuild
C++/Vig_Correction_opencv1/app/: Vig_Correction_opencv1.cpp
C++/Vig_Correction_opencv1/src/: commonfile.cpp
app/: main.cpp
include/: matrix.h  vignettingCorrection.hpp  vignettingCorrectionUsingRG.hpp
src/: matrix.cpp  vignettingCorrection.cpp  vignettingCorrectionUsingRG.cpp
testV/: CMakeLists.txt  Makefile  cmake_install.cmake  mkbuild  testV.cpp
